--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
     "test": "jest",
-    "storybook": "npx nuxt storybook"
+    "storybook": "npx nuxt storybook",
+    "e2e": "cypress open --browser chrome",
+    "e2e:silent": "cypress run"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
@@ -26,6 +28,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
+    "cypress": "^6.8.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-nuxt": "^2.0.0",
